--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -30,4 +34,6 @@ dependencies {
     api rootProject.ext.dependencies.cardView
     api rootProject.ext.dependencies.glide
     api rootProject.ext.dependencies.gson
+    api rootProject.ext.dependencies.material
+
 }
