--- a/config.gradle
+++ b/config.gradle
@@ -22,6 +22,7 @@ ext {
             cardView        : "1.0.0",
             glide           : "4.11.0", // 4.9.0
             gson            : "2.8.6",
+            material        : "1.0.0",
 //            plugin_lib      : "2.3.3",
 //            host_lib        : "2.3.3",
 //            material               : "1.2.0-alpha05",//material:1.2.0-alpha04
@@ -50,6 +51,7 @@ ext {
             cardView        : "androidx.cardview:cardview:${dependVersion.cardView}",
             glide           : "com.github.bumptech.glide:glide:${dependVersion.glide}",
             gson            : "com.google.code.gson:gson:${dependVersion.gson}",
+            material        : "com.google.android.material:material:${dependVersion.material}",
 //            plugin_lib      : "com.qihoo360.replugin:replugin-plugin-lib:${dependVersion.plugin_lib}",
 //            host_lib        : "com.qihoo360.replugin:replugin-host-lib:${dependVersion.host_lib}",
 //            material               : "com.google.android.material:material:${dependVersion.material}",
