--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     api rootProject.ext.dependencies.glide
     api rootProject.ext.dependencies.gson
     api rootProject.ext.dependencies.material
+    api rootProject.ext.dependencies.sweetalert
 
 }
