--- a/config.gradle
+++ b/config.gradle
@@ -23,6 +23,7 @@ ext {
             glide           : "4.11.0", // 4.9.0
             gson            : "2.8.6",
             material        : "1.0.0",
+            sweetalert      : "1.3",
 //            plugin_lib      : "2.3.3",
 //            host_lib        : "2.3.3",
 //            material               : "1.2.0-alpha05",//material:1.2.0-alpha04
@@ -52,6 +53,7 @@ ext {
             glide           : "com.github.bumptech.glide:glide:${dependVersion.glide}",
             gson            : "com.google.code.gson:gson:${dependVersion.gson}",
             material        : "com.google.android.material:material:${dependVersion.material}",
+            sweetalert      : "cn.pedant.sweetalert:library:${dependVersion.sweetalert}",
 //            plugin_lib      : "com.qihoo360.replugin:replugin-plugin-lib:${dependVersion.plugin_lib}",
 //            host_lib        : "com.qihoo360.replugin:replugin-host-lib:${dependVersion.host_lib}",
 //            material               : "com.google.android.material:material:${dependVersion.material}",
@@ -71,6 +73,7 @@ ext {
 //            fastjson               : "com.alibaba:fastjson:${dependVersion.fastjson}",
 //            expandable_recyclerview: "com.levelupstudio:expandable-recyclerview:${dependVersion.expandable_recyclerview}",
 //            pagerlayoutmanager     : "com.gcssloop.recyclerview:pagerlayoutmanager:${dependVersion.pagerlayoutmanager}"
+
 
     ]
 
