--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,14 @@ dependencies {
     api rootProject.ext.dependencies.material
     api rootProject.ext.dependencies.sweetalert
 
+
+    api rootProject.ext.dependencies.refresh_layout_kernel//核心必须依赖
+    api rootProject.ext.dependencies.refresh_header_classics//经典刷新头
+    api rootProject.ext.dependencies.refresh_header_radar//雷达刷新头
+    api rootProject.ext.dependencies.refresh_header_falsify//虚拟刷新头
+    api rootProject.ext.dependencies.refresh_header_material//谷歌刷新头
+    api rootProject.ext.dependencies.refresh_header_two_level//二级刷新头
+    api rootProject.ext.dependencies.refresh_footer_ball//球脉冲加载
+    api rootProject.ext.dependencies.refresh_footer_classics//经典加载
+
 }
