--- a/config.gradle
+++ b/config.gradle
@@ -15,15 +15,15 @@ ext {
 
 
     dependVersion = [
-            xutils          : "3.8.8",
-            appcompat       : "1.0.0",
-            recyclerview    : "1.1.0",
-            constraintlayout: "1.1.3",
-            cardView        : "1.0.0",
-            glide           : "4.11.0", // 4.9.0
-            gson            : "2.8.6",
-            material        : "1.0.0",
-            sweetalert      : "1.3",
+            xutils                  : "3.8.8",
+            appcompat               : "1.0.0",
+            recyclerview            : "1.1.0",
+            constraintlayout        : "1.1.3",
+            cardView                : "1.0.0",
+            glide                   : "4.11.0", // 4.9.0
+            gson                    : "2.8.6",
+            material                : "1.0.0",
+            sweetalert              : "1.3",
 //            plugin_lib      : "2.3.3",
 //            host_lib        : "2.3.3",
 //            material               : "1.2.0-alpha05",//material:1.2.0-alpha04
@@ -43,17 +43,27 @@ ext {
 //            fastjson               : "1.2.62",
 //            expandable_recyclerview: "1.0.1",
 //            pagerlayoutmanager     : "2.3.8",
+
+            refresh_layout_kernel   : "2.0.1",
+            refresh_header_classics : "2.0.1",
+            refresh_header_radar    : "2.0.1",
+            refresh_header_falsify  : "2.0.1",
+            refresh_header_material : "2.0.1",
+            refresh_header_two_level: "2.0.1",
+            refresh_footer_ball     : "2.0.1",
+            refresh_footer_classics : "2.0.1",
+
     ]
     dependencies = [
-            xutils          : "org.xutils:xutils:${dependVersion.xutils}",
-            appcompat       : "androidx.appcompat:appcompat:${dependVersion.appcompat}",
-            recyclerview    : "androidx.recyclerview:recyclerview:${dependVersion.recyclerview}",
-            constraintlayout: "androidx.constraintlayout:constraintlayout:${dependVersion.constraintlayout}",
-            cardView        : "androidx.cardview:cardview:${dependVersion.cardView}",
-            glide           : "com.github.bumptech.glide:glide:${dependVersion.glide}",
-            gson            : "com.google.code.gson:gson:${dependVersion.gson}",
-            material        : "com.google.android.material:material:${dependVersion.material}",
-            sweetalert      : "cn.pedant.sweetalert:library:${dependVersion.sweetalert}",
+            xutils                  : "org.xutils:xutils:${dependVersion.xutils}",
+            appcompat               : "androidx.appcompat:appcompat:${dependVersion.appcompat}",
+            recyclerview            : "androidx.recyclerview:recyclerview:${dependVersion.recyclerview}",
+            constraintlayout        : "androidx.constraintlayout:constraintlayout:${dependVersion.constraintlayout}",
+            cardView                : "androidx.cardview:cardview:${dependVersion.cardView}",
+            glide                   : "com.github.bumptech.glide:glide:${dependVersion.glide}",
+            gson                    : "com.google.code.gson:gson:${dependVersion.gson}",
+            material                : "com.google.android.material:material:${dependVersion.material}",
+            sweetalert              : "cn.pedant.sweetalert:library:${dependVersion.sweetalert}",
 //            plugin_lib      : "com.qihoo360.replugin:replugin-plugin-lib:${dependVersion.plugin_lib}",
 //            host_lib        : "com.qihoo360.replugin:replugin-host-lib:${dependVersion.host_lib}",
 //            material               : "com.google.android.material:material:${dependVersion.material}",
@@ -73,6 +83,17 @@ ext {
 //            fastjson               : "com.alibaba:fastjson:${dependVersion.fastjson}",
 //            expandable_recyclerview: "com.levelupstudio:expandable-recyclerview:${dependVersion.expandable_recyclerview}",
 //            pagerlayoutmanager     : "com.gcssloop.recyclerview:pagerlayoutmanager:${dependVersion.pagerlayoutmanager}"
+
+
+            refresh_layout_kernel   : "com.scwang.smart:refresh-layout-kernel:${dependVersion.refresh_layout_kernel}",//核心必须依赖
+            refresh_header_classics : "com.scwang.smart:refresh-header-classics:${dependVersion.refresh_header_classics}",//经典刷新头
+            refresh_header_radar    : "com.scwang.smart:refresh-layout-kernel:${dependVersion.refresh_header_radar}", //雷达刷新头
+            refresh_header_falsify  : "com.scwang.smart:refresh-header-radar:${dependVersion.refresh_header_falsify}",//虚拟刷新头
+            refresh_header_material : "com.scwang.smart:refresh-header-material:${dependVersion.refresh_header_material}", //谷歌刷新头
+            refresh_header_two_level: "com.scwang.smart:refresh-header-two-level:${dependVersion.refresh_header_two_level}",//二级刷新头
+            refresh_footer_ball     : "com.scwang.smart:refresh-footer-ball:${dependVersion.refresh_footer_ball}",//球脉冲加载
+            refresh_footer_classics : "com.scwang.smart:refresh-footer-classics:${dependVersion.refresh_footer_classics}",//经典加载
+
 
 
     ]
