--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.wma.library" />
+    package="com.wma.library">
+
+    <application>
+        <activity android:name=".select.SelectActivity" />
+    </application>
+</manifest>
